--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
   <link rel="stylesheet" type="text/css" href="css/styles.css">
   <title>js-app</title>
 </head>
+
 <body>
-  <div class="diamond-container" onclick="alert('clicked!')">
+  <div class="diamond-container">
     <div class="diamond diamond1"></div>
     <div class="diamond diamond2"></div>
     <div class="diamond diamond3"></div>
     <div class="diamond diamond4"></div>
   </div>
-  <script> alert ('Hello world');</script>
+  <script src="js/scripts.js"></script>
 </body>
 </html>
