--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <title>js-app</title>
 </head>
 <body>
-  <script src="js/scripts.js"></script>
+  <div class="pokedex">
+    <h1>POKEDEX</h1>
+    <ul class='pokemon-list'></ul>
+    <script src="js/scripts.js"></script>
+  </div>
 </body>
 </html>
