--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-  <link rel="stylesheet" type="text/css" href="css/style.css">
-  <link rel="shortcut icon" href="#"><!-- FAVICON -->
-  <title>js-app</title>
-</head>
-<body>
-  <div class="pokedex">
-    <h1>POKEDEX</h1>
-    <ul class='pokemon-list'></ul>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="shortcut icon" href="#"><!-- FAVICON -->
+    <title>Pokedex</title>
+  </head>
+  <body>
+    <div class="pokedex">
+      <h1>POKEDEX</h1>
+      <ul class='pokemon-list'></ul>
+    </div>
+    <script src="js/promise-polyfill.js"></script>
+    <script src="js/fetch.umd.js"></script>
     <script src="js/scripts.js"></script>
-  </div>
-</body>
+  </body>
 </html>
