--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <h1>POKEDEX</h1>
       <ul class='pokemon-list'></ul>
     </div>
+    <div id='modal-container'></div>
     <script src="js/promise-polyfill.js"></script>
     <script src="js/fetch.umd.js"></script>
     <script src="js/scripts.js"></script>
