--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
     <title>Pokedex</title>
   </head>
   <body>
-    <div class="pokedex">
-      <h1>POKEDEX</h1>
-      <ul class='pokemon-list'></ul>
+    <div class="container">
+      <div class="pokedex">
+        <h1>POKEDEX</h1>
+        <ul class='pokemon-list'></ul>
+      </div>
     </div>
     <div id='modal-container'></div>
     <script src="js/promise-polyfill.js"></script>
