--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="shortcut icon" href="#"><!-- FAVICON -->
+    <link rel="shortcut icon" href="img/pokeball.png"><!-- FAVICON -->
     <title>Pokedex</title>
   </head>
   <body>
