--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
       <a class="navbar-brand">POKEDEX</a>
       <form class="form-inline">
         <input id= "searchbar" oninput="search()" class="form-control mr-sm-2" type="search" placeholder="Search..." aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
       </form>
     </nav>
     <!-- MODAL -->
@@ -35,6 +34,7 @@
       </div>
     </div>
   </div>
+  <!-- POKEMONS -->
       <div class="pokedex">
         <ul class='list-group'></ul>
       </div>
