index aria and deleting redundant code

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </form>
     </nav>
     <!-- MODAL -->
-    <div class="modal fade" id="pokemon-info" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal fade" id="pokemon-info" tabindex="-1" role="dialog" aria-labelledby="pokemon-info" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
           <div class="modal-header">
@@ -35,7 +35,7 @@
       </div>
     </div>
   <!-- POKEMONS -->
-    <ul class='list-group'></ul>
+    <div class="pokemons row"></div>
     <script src="js/promise-polyfill.js"></script>
     <script src="js/fetch.umd.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
