loading screen fix

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
       </div>
     </div>
   <!-- POKEMONS -->
-    <div class="pokemons row"></div>
+    <div class="pokedex">
+      <div class="pokemons row"></div>
+    </div>
     <script src="js/promise-polyfill.js"></script>
     <script src="js/fetch.umd.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
